fix : center align & search btn lang change

--- a/css/codeviewer.css
+++ b/css/codeviewer.css
@@ -106,5 +106,5 @@ pre code.hljs::-webkit-scrollbar {
 pre code.hljs::-webkit-scrollbar-thumb {
     width: 2px;
     border-radius: 4px;
-    background-color: #7184aa;
+    background-color: #4a5260;
 }
